rest of latin-1 added
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@51 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/NNN.conf
+++ b/NNN.conf
@@ -4,9 +4,9 @@ IndexName NNN
 SwishProgParameters NNN
 IndexDir /home/kps/seal/inneacs/swishy
 IndexContents TXT* .txt
-WordCharacters abcdefghijklmnopqrstuvwxyzáéíóú'-0123456789
-BeginCharacters abcdefghijklmnopqrstuvwxyzáéíóú'-0123456789
-EndCharacters abcdefghijklmnopqrstuvwxyzáéíóú'-0123456789
+WordCharacters abcdefghijklmnopqrstuvwxyzàáâãäåæçèéêëìíîïğñòóôõöøùúûüış'-0123456789
+BeginCharacters abcdefghijklmnopqrstuvwxyzàáâãäåæçèéêëìíîïğñòóôõöøùúûüış'-0123456789
+EndCharacters abcdefghijklmnopqrstuvwxyzàáâãäåæçèéêëìíîïğñòóôõöøùúûüış'-0123456789
 IgnoreFirstChar '-
 IgnoreLastChar '-
-TranslateCharacters ABCDEFGHIJKLMNOPQRSTUVWXYZÁÉÍÓÚ abcdefghijklmnopqrstuvwxyzáéíóú
+TranslateCharacters ABCDEFGHIJKLMNOPQRSTUVWXYZÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏĞÑÒÓÔÕÖØÙÚÛÜİŞ abcdefghijklmnopqrstuvwxyzàáâãäåæçèéêëìíîïğñòóôõöøùúûüış
