missed commit in CVS

--- a/NNN.conf
+++ b/NNN.conf
@@ -1,6 +1,7 @@
 IndexFile /home/kps/seal/inneacs/NNN.index
 IndexName NNN
 # IndexDir /snapshot/aimsigh/NNN
+# "currently only support for eight bit characters" :(
 SwishProgParameters NNN
 IndexDir /home/kps/gaeilge/aimsigh/aimsigh/swishy
 IndexContents TXT* .txt
